{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 56,
  "lineage": "18f8d6bf-698d-64d8-7449-bc9223dfb2e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:internet-gateway/igw-035e858eddb1b148f",
            "id": "igw-035e858eddb1b148f",
            "owner_id": "910897187906",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-098fdab6bc3814188",
            "owner_id": "910897187906",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035e858eddb1b148f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b682bec4cc221d6e",
            "route_table_id": "rtb-098fdab6bc3814188",
            "subnet_id": "subnet-07c04191a9f07f812"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cda7ffffded7ed4e",
            "route_table_id": "rtb-098fdab6bc3814188",
            "subnet_id": "subnet-0855fcb24006e5955"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:security-group/sg-0329626afe667377c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0329626afe667377c",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.222.32.127/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-cluster-sg",
            "name_prefix": "",
            "owner_id": "910897187906",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-workernode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:security-group/sg-0d0816f38b5f94d11",
            "description": "for WS to communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0816f38b5f94d11",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.222.32.127/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "standard-workernode-sg",
            "name_prefix": "",
            "owner_id": "910897187906",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "standard-workernode"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "34.222.32.127/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-74158031",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0329626afe667377c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:subnet/subnet-07c04191a9f07f812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07c04191a9f07f812",
            "map_public_ip_on_launch": true,
            "owner_id": "910897187906",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:subnet/subnet-0855fcb24006e5955",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0855fcb24006e5955",
            "map_public_ip_on_launch": true,
            "owner_id": "910897187906",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            },
            "vpc_id": "vpc-03d3690119fed79df"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:910897187906:vpc/vpc-03d3690119fed79df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015a9c3eea55ca17b",
            "default_route_table_id": "rtb-050a1de70fe42d8d7",
            "default_security_group_id": "sg-0b405cfc04fa33ecb",
            "dhcp_options_id": "dopt-939198f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03d3690119fed79df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050a1de70fe42d8d7",
            "owner_id": "910897187906",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/dev-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}